Fix: Fixng styling issue for Chips

--- a/paper-chip-input.html
+++ b/paper-chip-input.html
@@ -27,6 +27,11 @@ the License.
       position: relative;
       @apply --paper-chip-input;
     }
+
+    .chips {
+      @apply --layout-horizontal;
+      @apply --layout-center;
+    }
     </style>
     <paper-input class="input-input"
       always-float-label="[[alwaysFloatLabel]]"
