--- a/paper-chip-input.html
+++ b/paper-chip-input.html
@@ -31,6 +31,7 @@ the License.
     .chips {
       @apply --layout-horizontal;
       @apply --layout-center;
+      @apply --layout-wrap;
     }
     </style>
     <paper-input class="input-input"
