Update: Setting minimum witding of the input.

--- a/paper-chip-input.html
+++ b/paper-chip-input.html
@@ -26,6 +26,10 @@ the License.
       display: block;
       position: relative;
       @apply --paper-chip-input;
+
+      --paper-input-container-shared-input-style: {
+        min-width: 120px;
+      };
     }
 
     .chips {
