--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,8 @@
     <script>
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
-        'paper-chip-input-test.html'
+        'paper-chip-input-test.html',
+        'paper-chip-autocomplete-test.html'
       ]);
     </script>
 
