--- a/paper-chip-input.html
+++ b/paper-chip-input.html
@@ -120,7 +120,9 @@ the License.
    * @appliesMixin ArcBehaviors.PaperChipInputMixin
    */
   class PaperChipInput extends ArcBehaviors.PaperChipInputMixin(Polymer.Element) {
-    static get is() { return 'paper-chip-input'; }
+    static get is() {
+      return 'paper-chip-input';
+    }
 
     static get properties() {
       return {
@@ -154,23 +156,27 @@ the License.
      * be accepted.
      */
     _enterHandler() {
-      if (this._suggestionsOpened || !this.validate()) {
+      if (this._suggestionsOpened || !this.shadowRoot.querySelector('paper-input').validate()) {
         return;
       }
       const value = this._value;
       if (!value) {
         return;
       }
-      if (!this._isAllowed(value)) {
+      const lowerValue = value.toLowerCase();
+      const source = this._findSource(this.source, lowerValue);
+      const id = source && source.id;
+      if (!this._isAllowed(value, id)) {
         return;
       }
-      this.addChip(value, true);
+      const icon = source && source.icon;
+      this.addChip(value, true, icon, id);
       this._value = '';
     }
     /**
      * Removes latest chip if there's no value in the text field.
      */
-    _backspaceHandler(e) {
+    _backspaceHandler() {
       const chips = this.chips;
       if (this._value || !chips || !chips.length) {
         return;
@@ -205,10 +211,10 @@ the License.
      */
     _suggestionSelected(e) {
       const item = e.detail.value;
-      if (!this._isAllowed(item.value)) {
+      if (!this._isAllowed(item.value, item.id)) {
         return;
       }
-      this.addChip(item.value, true, item.icon);
+      this.addChip(item.value, true, item.icon, item.id);
       this._value = '';
     }
     /**
@@ -229,12 +235,13 @@ the License.
       if (this._value) {
         this._enterHandler();
       }
-      const chips = this.shadowRoot.querySelectorAll('paper-chips');
-      for (let i = 0, len = chips.length; i < len; i++) {
-        if (chips[i].focused) {
-          chips[i]._focusBlurHandler({});
-        }
-      }
+      // Chip looses it's focus right after getting it as input stills the focus.
+      // const chips = this.shadowRoot.querySelectorAll('paper-chip');
+      // for (let i = 0, len = chips.length; i < len; i++) {
+      //   if (chips[i].focused) {
+      //     chips[i]._focusBlurHandler({});
+      //   }
+      // }
     }
   }
   window.customElements.define(PaperChipInput.is, PaperChipInput);
