--- a/test/paper-chip-autocomplete-test.html
+++ b/test/paper-chip-autocomplete-test.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>paper-chip-input test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../../iron-icons/iron-icons.html">
-  <link rel="import" href="../paper-chip-autocomplete.html">
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../wct-browser-legacy/browser.js"></script>
+  <script type="module" src="../../../@polymer/iron-icons/iron-icons.js"></script>
+  <script type="module" src="../paper-chip-autocomplete.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,9 @@
       <paper-chip-autocomplete></paper-chip-autocomplete>
     </template>
   </test-fixture>
-  <script>
+  <script type="module">
+  import '../../../@polymer/iron-icons/iron-icons.js';
+  import '../paper-chip-autocomplete.js';
   suite('selectPrevious()', () => {
     let element;
     const source = ['Apple', 'Appli', 'Applo'];
