--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
-  </head>
-  <body>
-    <script>
-      // Load and run all tests (.html, .js):
-      WCT.loadSuites([
-        'paper-chip-input-test.html',
-        'paper-chip-autocomplete-test.html'
-      ]);
-    </script>
 
-</body></html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <script src="../../../mocha/mocha.js"></script>
+  <script src="../../../wct-mocha/wct-mocha.js"></script>
+</head>
+
+<body>
+  <script>
+  // Load and run all tests (.html, .js):
+  WCT.loadSuites([
+    'paper-chip-input-test.html',
+    'paper-chip-autocomplete-test.html'
+  ]);
+  </script>
+</body>
+
+</html>
