--- a/test/paper-chip-input-test.html
+++ b/test/paper-chip-input-test.html
@@ -4,10 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>paper-chip-input test</title>
+
   <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../../wct-browser-legacy/browser.js"></script>
-  <script type="module" src="../../../@polymer/iron-icons/iron-icons.js"></script>
-  <script type="module" src="../paper-chip-input.js"></script>
+  <script src="../../../@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../../../mocha/mocha.js"></script>
+  <script src="../../../chai/chai.js"></script>
+  <script src="../../../wct-mocha/wct-mocha.js"></script>
+
 </head>
 <body>
   <test-fixture id="Basic">
@@ -67,6 +70,7 @@
   <script type="module">
   import '../../../@polymer/iron-icons/iron-icons.js';
   import '../paper-chip-input.js';
+  import sinon from '../../../sinon/pkg/sinon-esm.js';
   suite('Basics', () => {
     let element;
 
