Updating demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,10 +14,11 @@
     <script type="module" src="../paper-chip-input.js"></script>
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
-      :root {
+      html {
         --arc-font-body2: {
           @apply --paper-font-body2;
-        };
+        }
+        --paper-chip-autocomplete-background-color: #fff;
       }
 
       h1 {
